package com.jsj.member.ob.dto.proto;

import "BaseResponse.proto";

message GetCustomerIdByPhoneResp {
   optional BaseResponse BaseResponse = 1;
   optional int32 CustomerId = 2 [default = 0];
}