package com.jsj.member.ob.dto.proto;

import "BaseRequest.proto";
import "StrictChoiceOrderType.proto";

message StrictChoiceBackRequest {
    optional BaseRequest BaseRequest = 1;
   optional int32 JSJID = 2 [default = 0];
   optional int32 OrderID = 3 [default = 0];
   optional double Money = 4 [default = 0];
   optional StrictChoiceOrderType OrderType = 5 [default = StrictChoiceOrderTypeNotSet];
   optional int32 ProjectID = 6 [default = 0];
   optional int32 DepositDeptID = 7 [default = 0];
   optional string Remark = 8;
}